---
source: crates/embucket-functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT\n        HEX_ENCODE('0') AS zero,\n        HEX_ENCODE('123') AS numbers,\n        HEX_ENCODE('9876543210') AS long_number\""
---
Ok(
    [
        "+------+---------+----------------------+",
        "| zero | numbers | long_number          |",
        "+------+---------+----------------------+",
        "| 30   | 313233  | 39383736353433323130 |",
        "+------+---------+----------------------+",
    ],
)
